WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150306
Shadow GraphicsContext's ImageInterpolationQuality inside GraphicsContextState
https://bugs.webkit.org/show_bug.cgi?id=150306
Summary
Shadow GraphicsContext's ImageInterpolationQuality inside GraphicsContextState
Myles C. Maxfield
Reported
2015-10-18 15:42:06 PDT
Shadow GraphicsContext's ImageInterpolationQuality inside GraphicsContextState
Attachments
Patch
(8.22 KB, patch)
2015-10-18 15:45 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(8.23 KB, patch)
2015-10-19 11:21 PDT
,
Myles C. Maxfield
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2015-10-18 15:45:22 PDT
Created
attachment 263430
[details]
Patch
Darin Adler
Comment 2
2015-10-18 15:55:52 PDT
Comment on
attachment 263430
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=263430&action=review
> Source/WebCore/ChangeLog:11 > + When getting the ImageInterpolationQuality, there is no need to round-trip through > + the platform's graphics context. This patch migrates this piece of state to the > + existing idiom of having a setter in GraphicsContext.cpp which sets the relevent > + state in GraphicsContextState and then calls into a platform-specific setter.
I don’t understand what’s going on with this sequence of patches. Are we going to shadow all the state from the platform graphics contexts?
Myles C. Maxfield
Comment 3
2015-10-19 11:21:51 PDT
Created
attachment 263493
[details]
Patch
Simon Fraser (smfr)
Comment 4
2015-10-19 11:26:46 PDT
Comment on
attachment 263493
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=263493&action=review
> Source/WebCore/platform/graphics/cg/GraphicsContextCG.cpp:117 > +static InterpolationQuality convertInterpolationQuality(CGInterpolationQuality quality)
Can this be a C++ operator?
Myles C. Maxfield
Comment 5
2015-10-19 21:21:37 PDT
Comment on
attachment 263493
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=263493&action=review
>> Source/WebCore/platform/graphics/cg/GraphicsContextCG.cpp:117 >> +static InterpolationQuality convertInterpolationQuality(CGInterpolationQuality quality) > > Can this be a C++ operator?
error: conversion function must be a non-static member function
Myles C. Maxfield
Comment 6
2015-10-19 21:23:43 PDT
Committed
r191330
: <
http://trac.webkit.org/changeset/191330
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug